// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/npm/extract/yarn .getYarnLock() extracts yarn 1 1`] = `
{
  "ansi-styles@^3.2.1": "3.2.1",
  "chalk@^2.4.1": "2.4.1",
  "color-convert@^1.9.0": "1.9.1",
  "color-name@^1.1.1": "1.1.3",
  "escape-string-regexp@^1.0.5": "1.0.5",
  "has-flag@^3.0.0": "3.0.0",
  "supports-color@^5.3.0": "5.4.0",
}
`;

exports[`modules/manager/npm/extract/yarn .getYarnLock() extracts yarn 2 1`] = `
{
  "ansi-styles@^3.2.1": "3.2.1",
  "chalk@^2.4.1": "2.4.2",
  "color-convert@^1.9.0": "1.9.3",
  "color-name@1.1.3": "1.1.3",
  "escape-string-regexp@^1.0.5": "1.0.5",
  "has-flag@^3.0.0": "3.0.0",
  "supports-color@^5.3.0": "5.5.0",
  "yarn2@.": "0.0.0-use.local",
}
`;

exports[`modules/manager/npm/extract/yarn .getYarnLock() extracts yarn 2 cache version 1`] = `
{
  "@babel/runtime@^7.11.2": "7.11.2",
  "ansi-styles@^3.2.1": "3.2.1",
  "chalk@^2.4.1": "2.4.2",
  "color-convert@^1.9.0": "1.9.3",
  "color-name@1.1.3": "1.1.3",
  "escape-string-regexp@^1.0.5": "1.0.5",
  "has-flag@^3.0.0": "3.0.0",
  "regenerator-runtime@^0.13.4": "0.13.7",
  "supports-color@^5.3.0": "5.5.0",
  "yarn2@.": "0.0.0-use.local",
}
`;
